feat: Crymorra's Gettin' a Facelift (and Vines are Smarter Now!)
So, Crymorra's been hitting the gym and got itself a new treelike epic structure (goodbye old one, hello new JSON!).  Also fixed an issue where world seeds weren't unique (too much predictability is boring!).

But the real stars of this update are the Magenta Frost Vines! They're now:

*   Smarter: They actually *grow* and *break* based on rules (who knew vines could be so logical?).
*   Transparent: Rendered as cutout, so they don't look like solid blocks of magenta sadness.
*   Climbable: Because, what's a vine if you can't climb it?

Plus, some biome shuffling (frigid seas and magenta forests on the move!) and general cleanup.  Enjoy!